<resources>
    <string name="app_name">Cool School</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="tv_login">Prijava</string>
    <string name="username">Korisničko ime</string>
    <string name="password">Lozinka</string>
    <string name="login">Prijava</string>
    <string name="tv_no_account">Nemate račun?</string>
    <string name="register">Registracija</string>
    <string name="teacher_mf">Učitelj/ica</string>
    <string name="student_mf">Učenik/ca</string>

    <string name="tv_student_reg">Registracija učenika/ce</string>
    <string name="tv_teacher_reg">Registracija učitelja/ice</string>
    <string name="name">Ime</string>
    <string name="surname">Prezime</string>
    <string name="retype_pass">Ponovi lozinku</string>
    <string name="email">E-mail</string>
    <string name="choose_school">Odabir škola</string>
    <string name="search_school">Pretraži škole</string>
    <string name="class_num">Razred</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Odjava</string>
    <string name="edit">Uredi</string>
    <string name="save">Spremi</string>
    <string name="upload">Predaj</string>
    <string name="new_password">Nova lozinka</string>
    <string name="cancel">Odustani</string>
    <string name="icons_download">Ikone preuzete sa: http://icons8.com</string>
    <string name="copyright">Copyright Kristijan Štefančić</string>
    <string name="filter">Filter</string>
    <string name="tv_difficulty">Težina:</string>
    <string name="tv_subject">Predmet:</string>
    <string name="tv_class">Razred:</string>
    <string name="tv_max_points">Broj bodova:</string>
    <string name="question">Unesite pitanje</string>
    <string name="answer_1">Unesite prvi odgovor</string>
    <string name="answer_2">Unesite drugi odgovor</string>
    <string name="answer_3">Unesite treći odgovor</string>
    <string name="answer_4">Unesite četvrti odgovor</string>
    <string name="points_for_answer">Broj bodova za točan odgovor</string>
    <string name="title_hint">Naslov kviza</string>
    <string name="description_hint">Opis kviza (tipovi pitanja itd.)</string>
    <string name="sum_points_hint">Suma bodova</string>
    <string name="add">Dodaj</string>
    <string name="tv_school">Škola</string>
    <string name="tv_city">Grad</string>
    <string name="tv_county">Županija</string>
    <string name="tv_current_position">Nalazite se na %1$d. poziciji u odnosu na sve igrače</string>
    <string name="won_points">Ostvaren broj bodova:</string>

    <string name="title_activity_quiz_submit">QuizSubmitActivity</string>
</resources>
